{"maps":[{"name":"Player","actions":[{"name":"UseItem","bindings":[]},{"name":"Attack","bindings":[]},{"name":"PickUp","bindings":[]}],"bindings":[{"name":"","path":"<Keyboard>/f","interactions":"Press()","groups":"","action":"UseItem","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Mouse>/leftButton","interactions":"Press()","groups":"","action":"Attack","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Keyboard>/f","interactions":"Press()","groups":"","action":"PickUp","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""}]}]}